c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/scalar_required/struct_as_int.c
struct s {
  int a;
};

int main(void) {
  struct s x = {1};
  // can only apply ~ operator to ints, not structs
  (void)~x;
  return 0;
}